force-app/main/default/objects/clariti__InvoiceItem__c/clariti__InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>Invoice Items are used to add payable items to an Invoice.</description>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INVITEM-{000000}</displayFormat>
        <label>Invoice Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>