force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__AmountOutstanding__c.field-meta.xml
<CustomField>
    <fullName>clariti__AmountOutstanding__c</fullName>
    <formula>clariti__InvoiceAmount__c -  clariti__AmountPaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>