force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>clariti__AmountPaid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>