force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__Deposit__c.field-meta.xml
<CustomField>
    <fullName>clariti__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit</label>
    <referenceTo>clariti__Deposit__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>