force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__Fee__c.field-meta.xml
<CustomField>
    <fullName>clariti__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>MUSW__Fee__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>