force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__Invoice__c.field-meta.xml
<CustomField>
    <fullName>clariti__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>clariti__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>