force-app/main/default/objects/clariti__InvoiceItem__c/fields/clariti__InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__InvoiceAmount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>