force-app/main/default/objects/clariti__InvoiceItem__c/validationRules/clariti__Currency_Enforce_Decimal_Places.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__Currency_Enforce_Decimal_Places</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ROUND(clariti__AmountPaid__c,2) != clariti__AmountPaid__c, ROUND(clariti__InvoiceAmount__c,2) != clariti__InvoiceAmount__c)</errorConditionFormula>
    <errorMessage>This is a currency field and can not have more than two decimal places</errorMessage>
</ValidationRule>